# tcc

./: .gitignore  CountLicitation.py  Main.py  README.md  ValidateDataTrain.py  converter.py  environment.md  filter.py  pyproject.toml  search.py
best_models/: INIT.md  Planilha Controle 2021 - CONCLUÍDA - Diário oficial.xlsx
best_models/notebooks/: TCC.ipynb  TCC_NER.ipynb
extract_text/: extract_multilingual_pdf2text.py  extract_pdfminer3.py  extract_pdfminer3_pb.py  extract_pdfminer_six.py  extract_pymupdf.py  extract_pypdf2.py  extract_pyxpdf.py  multilingual_pdf2text_ac.py  multilingual_pdf2text_pb.py  pdfminer_six_ac.py  pdfminer_six_pb.py  pymupdf.py  pyxpdf_ac.py  pyxpdf_pb.py  utils.py
nlp/: main.py
outputs/: data_pymupdf.json  index_pymupdf.html  output.txt  output_dou_ac_17_12_21.pdf.txt  output_multilingual_pdf2.txt  output_multilingual_pdf2_pb.txt  output_multilingual_pdf2text.txt  output_pdfminer3.txt  output_pdfminer3_pb.txt  output_pdfminer_six.txt  output_pymupdf.txt  output_pypdf2.txt
outputs/dou_pb/: output_dou_pb_17_12_21.pdf.txt  output_dou_pb_18_12_21.pdf.txt  output_dou_pb_21_12_21.pdf.txt  output_dou_pb_22_12_21.pdf.txt  output_dou_pb_23_12_21.pdf.txt  output_dou_pb_24_12_21.pdf.txt
outputs/multilingual_ocr_dou_ac/: output_dou_ac_20_12_21.pdf.txt  output_dou_ac_21-12_21.pdf.txt  output_dou_ac_22_12_21.pdf.txt  output_dou_ac_23_12_21.pdf.txt
outputs/multilingual_ocr_dou_pb/: output_dou_pb_17_12_21.pdf.txt  (+5 more)
pos_anotation/: ValidateDataTrain.py  convert_anotation_2_binary.py  verify.py
pre_processing/: main.py  main_subtext_pymupdf.py
(+123 files in other folders)
