[tool.poetry]
name = "tcc"
version = "0.1.0"
description = "Meu TCC S2"
authors = ["Rich <richelton14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyPDF2 = "^1.26.0"
PyMuPDF = "^1.19.2"
pdfminer3 = "^2018.12.3"
"pdfminer.six" = "^20211012"
spacy = "^3.2.0"
multilingual-pdf2text = "^1.1.0"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
blue = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
